# did-it-hail

./: .gitignore  README.md  icao_export.py  nexrad.csv  process_and_animate.py  pyproject.toml  requirements.in  requirements.txt  scan_downloader.py  setup.cfg  setup.py  test.ipynb  utils.py
did_it_hail/: config.py  enums.py  mosaic.py  utils.py
did_it_hail/ingest/: download.py  pipeline.py  store.py  transform.py
did_it_hail/scripts/: generate_grid.py
did_it_hail/utils/: generate_grid.py
src/did_it_hail/: process_and_animate.py  scan_downloader.py
