[project]
name = "did-it-hail"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Joel Heaps", email = "joel@joelheaps.com"},
]
dependencies = [
    "xarray",
    "numpy",
    "metpy",
    "cartopy",
    "matplotlib",
    "ffmpeg-python",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}


[tool.pdm]
distribution = false


[tool.ruff]
select = ["ALL"]
ignore = ["PD011", "T201", "PGH003"]