[project]
name = "did-it-hail"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Joel Heaps", email = "joel@joelheaps.com"},
]
dependencies = [
    "xarray>=2024.3.0",
    "numpy",
    "metpy",
    "cartopy",
    "matplotlib",
    "ffmpeg-python",
    "rioxarray>=0.15.5",
    "structlog>=24.1.0",
    "netcdf4>=1.6.5",
    "rasterio>=1.3.10",
    "schedule>=1.2.1",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.dagster]
module_name = "did_it_hail"

[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "rich>=13.7.1",
]
[tool.ruff]
select = ["ALL"]
ignore = ["PD011", "T201", "PGH003", "ANN101", "ERA001", "S101"]